fix wysiwyg aligns in backend

--- a/src/Enhavo/Bundle/AppBundle/Resources/public/sass/editor.scss
+++ b/src/Enhavo/Bundle/AppBundle/Resources/public/sass/editor.scss
@@ -9,3 +9,15 @@ body {font-family:"Open Sans", Arial, sans-serif;font-size:12px;line-height:1.42
 img {
 	max-width:100%;
 }
+.text-left {
+  text-align: left;
+}
+.text-right {
+  text-align: right;
+}
+.text-justify {
+  text-align: justify;
+}
+.text-center {
+  text-align: center;
+}
